Minimal scope for ElasticFluidSearch